--- a/aboutEN.html
+++ b/aboutEN.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="فعالياتك - اكتشف أحدث الفعاليات والأنشطة الترفيهية والثقافية والرياضية في مدينتك. تابع الفعاليات المميزة واحجز مكانك بسهولة." />
-  <meta name="keywords" content="فعاليات, ترفيه, حفلات, مهرجانات, ثقافة, رياضة, أحداث, جدة, السعودية" />
-  <meta name="author" content="فعالياتك" />
+    content="Your Events - Discover the latest entertainment, cultural, and sports activities in your city. Stay updated with featured events and book your spot easily." />
+  <meta name="keywords" content="events, entertainment, concerts, festivals, culture, sports, activities, Jeddah, Saudi Arabia" />
+  <meta name="author" content="Your Events" />
 
-  <!-- bootstrap fontawesom -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.rtl.min.css"
-    integrity="sha384-DOXMLfHhQkvFFp+rWTZwVlPVqdIhpDVYT9csOnHSgWQWPX0v5MCGtjCJbY6ERspU" crossorigin="anonymous" />
+  <!-- Bootstrap and Font Awesome -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <!-- icon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/icon//apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/icon//favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icon//favicon-16x16.png" />
-  <link rel="manifest" href="./assets/img/icon//site.webmanifest" />
+  <!-- Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/icon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/icon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icon/favicon-16x16.png" />
+  <link rel="manifest" href="./assets/img/icon/site.webmanifest" />
 
   <link rel="stylesheet" href="./assets/css/index.css" />
-  <link rel="stylesheet" href="./assets/Css/About.css">
+  <link rel="stylesheet" href="./assets/Css/About.css" />
   <link rel="stylesheet" href="./assets/css/darkMode.css" />
-  <title>فعالياتك</title>
+
+  <title>Your Events</title>
 </head>
 
 <body>
   <header>
-    <!-- navbar  -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="logo me-3" href="./index.html">فعالياتك</a>
+        <a class="logo ms-3" href="./indexEN.html">Your Events</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,27 +44,27 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item ps-5">
-              <a class="nav-link  " aria-current="page" href="./index.html">الرئيسية</a>
+            <li class="nav-item pe-5">
+              <a class="nav-link" aria-current="page" href="./indexEN.html">Home</a>
             </li>
-            <li class="nav-item ps-5">
-              <a class="nav-link" href="./events.html">الفعاليات</a>
+            <li class="nav-item pe-5">
+              <a class="nav-link" href="./eventsEN.html">Events</a>
             </li>
-            <li class="nav-item ps-5">
-              <a class="nav-link" href="./contact.html">تواصل معنا</a>
+            <li class="nav-item pe-5">
+              <a class="nav-link" href="./contactEN.html">Contact Us</a>
             </li>
-            <li class="nav-item ps-5">
-              <a class="nav-link active" href="./about.html">عنا</a>
+            <li class="nav-item pe-5">
+              <a class="nav-link active" href="./aboutEN.html">About</a>
             </li>
           </ul>
-        <a href="./aboutEN.html">
-          <button id="lang-toggle" class="btn btn-outline-secondary me-3">
-            <i class="fa-solid fa-language"></i>
+          <a href="./about.html">
+            <button id="lang-toggle" class="btn btn-outline-secondary ms-3">
+              <i class="fa-solid fa-language"></i>
+            </button>
+          </a>
+          <button id="theme-toggle" class="btn btn-outline-secondary ms-3">
+            <i class="fas fa-sun"></i>
           </button>
-        </a>
-        <button id="theme-toggle" class="btn btn-outline-secondary me-3">
-          <i class="fas fa-sun"></i>
-        </button>
         </div>
       </div>
     </nav>
@@ -71,69 +72,57 @@
 
   <main>
     <section class="about-us">
-
-
       <div>
         <div class="goal">
           <div class="container">
-
-            <p>أهلاً بكم في منصتنا</p>
+            <p>Welcome to Our Platform</p>
             <h3>
-              منصتنا وُجدت لتكون دليلك الأول لاكتشاف جميع الفعاليات في منطقتك،
-              سواء كانت ثقافية، رياضية، فنية أو ترفيهية. نحن نؤمن أن الفعاليات
-              ليست مجرد أنشطة عابرة، بل هي مساحات للتواصل، للتعلّم، ولصناعة
-              ذكريات تبقى معك. هدفنا أن نجعل الوصول إلى هذه التجارب أكثر سهولة،
-              وأن نتيح للمنظمين فرصة لعرض فعالياتهم أمام جمهور واسع ومتفاعل.
+              Our platform was created to be your primary guide for discovering all events in your area,
+              whether cultural, sports, artistic, or entertainment. We believe that events are not just fleeting activities,
+              but spaces for connection, learning, and creating lasting memories. Our goal is to make accessing these experiences easier
+              and to provide organizers with an opportunity to showcase their events to a wide and engaged audience.
             </h3>
           </div>
         </div>
 
-
-        <div class="vision ">
+        <div class="vision">
           <div class="container px-5">
-
-            <p>الرؤية</p>
+            <p>Vision</p>
             <h4>
-              أن نصبح المنصة الأولى والمرجع الأهم للفعاليات في المنطقة. نسعى
-              لتوفير تجربة متكاملة للزائر، تبدأ من تصفح الفعاليات بطريقة سلسة،
-              مروراً بمتابعة تفاصيل كل فعالية، وانتهاءً بتجربة حضور ثرية ومليئة
-              بالخيارات. رؤيتنا أن تكون المنصة جسرًا يربط بين الشغف والحدث،
-              وبين المنظم والجمهور.
+              To become the leading platform and the most trusted reference for events in the region. We aim
+              to provide a seamless experience for visitors, starting with browsing events effortlessly,
+              following event details, and culminating in a rich and diverse attendance experience. Our vision is to make the platform a bridge
+              connecting passion with events and organizers with their audience.
             </h4>
           </div>
         </div>
 
         <div class="msg container">
           <div class="row m-2">
-
             <div class="content col-md-7 pb-3">
-              <h1>الرسالة</h1>
+              <h1>Mission</h1>
               <h5>
-                رسالتنا تتمثل في دعم الحركة الثقافية والترفيهية في المجتمع،
-                وتقديم أداة عملية تساعد الأفراد على اكتشاف الفعاليات المناسبة
-                لاهتماماتهم. نحن نعمل على تمكين المنظمين من الوصول إلى جمهورهم
-                بطريقة أسهل وأكثر فاعلية، وفي الوقت نفسه نمنح الجمهور فرصة
-                لاستكشاف فعاليات جديدة تغني تجربتهم وتلبي اهتماماتهم.
+                Our mission is to support the cultural and entertainment movement in the community
+                and provide a practical tool that helps individuals discover events that match their interests.
+                We work to empower organizers to reach their audience more easily and effectively,
+                while offering the public an opportunity to explore new events that enrich their experiences and cater to their interests.
               </h5>
             </div>
             <div class="image col-md-5 pb-3">
-              <img class="rounded" src="./assets/img/about/msg.jpeg" alt="صورة تعبيرية عن الرسالة">
+              <img class="rounded" src="./assets/img/about/msg.jpeg" alt="Image representing the mission">
             </div>
           </div>
-
         </div>
       </div>
-
-
     </section>
 
-    <section class="members ">
+    <section class="members">
       <div class="testimonials py-5" id="testimonials">
-        <h1 class="pb-4">من يقف خلف المنصة؟</h1>
+        <h1 class="pb-4">Who’s Behind the Platform?</h1>
         <div class="container">
           <div class="box">
             <img decoding="async" src="./assets/img/about/wesam.jpg" alt="" />
-            <h3>وسام محمد</h3>
+            <h3>Wesam Mohammed</h3>
             <span class="title">wessam_237869</span>
             <p>
               HomePage + ...
@@ -142,96 +131,87 @@
 
           <div class="box">
             <img decoding="async" src="./assets/img/about/abdullah.jpg" alt="" />
-            <h3>عبدالله </h3>
+            <h3>Abdullah</h3>
             <span class="title">abdullah_285176</span>
-
             <p>
-              تجميع المحتوى + about page
+              Content Collection + About Page
             </p>
           </div>
           <div class="box">
             <img decoding="async" src="./assets/img/about/fouad.jpg" alt="" />
-            <h3>فؤاد</h3>
+            <h3>Fouad</h3>
             <span class="title">fouad_235163</span>
-
             <p>
               ?? + ??
             </p>
           </div>
         </div>
       </div>
-
     </section>
 
-
-
-
-
-    <section class="policy  py-5">
+    <section class="policy py-5">
       <div class="container">
         <div class="accordion" id="accordionPanelsStayOpenExample">
-          <!-- تقديم فعالية -->
+          <!-- Submit an Event -->
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                 aria-expanded="true" aria-controls="collapseOne">
-                تقديم فعالية؟
+                Submit an Event?
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show">
               <div class="accordion-body">
                 <ol>
-                  <li>املأ نموذج تقديم الفعالية.</li>
-                  <li>أرفق المعلومات الأساسية: الاسم، التاريخ، المكان، الفئة المستهدفة.</li>
-                  <li>أرفق صورة أو شعار للفعالية (اختياري لكن يُفضل).</li>
-                  <li>أرسل النموذج وانتظر مراجعة فريق المنصة.</li>
+                  <li>Fill out the event submission form.</li>
+                  <li>Include basic information: name, date, location, target audience.</li>
+                  <li>Attach an image or logo for the event (optional but preferred).</li>
+                  <li>Submit the form and await review by the platform team.</li>
                 </ol>
               </div>
             </div>
           </div>
 
-          <!-- معايير النشر -->
+          <!-- Publishing Criteria -->
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                معايير النشر
+                Publishing Criteria
               </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse">
               <div class="accordion-body">
                 <ol>
-                  <li>أن تكون الفعالية حقيقية ومحددة بتاريخ ومكان واضحين.</li>
-                  <li>خالية من أي محتوى مسيء أو غير مناسب.</li>
-                  <li>متوافقة مع الأنظمة والقوانين المحلية.</li>
-                  <li>أن تتوفر معلومات دقيقة يمكن التحقق منها.</li>
-                  <li>للفعاليات التجارية: يجب ذكر الجهة المنظمة بوضوح.</li>
+                  <li>The event must be real and have a clear date and location.</li>
+                  <li>It must be free of any offensive or inappropriate content.</li>
+                  <li>It must comply with local regulations and laws.</li>
+                  <li>Accurate and verifiable information must be provided.</li>
+                  <li>For commercial events: The organizing entity must be clearly stated.</li>
                 </ol>
               </div>
             </div>
           </div>
 
-          <!-- ملاحظة للمنظمين -->
+          <!-- Note for Organizers -->
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                ملاحظة للمنظمين
+                Note for Organizers
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse">
               <div class="accordion-body">
                 <p>
-                  يحق لفريق المنصة تعديل أو رفض أي فعالية لا تتماشى مع سياسات النشر.
+                  The platform team reserves the right to edit or reject any event that does not align with our publishing policies.
                 </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-
     </section>
-
   </main>
 
   <footer>
@@ -240,7 +220,7 @@
         <div class="row gy-3 justify-content-center">
           <!-- Contact -->
           <div class="col-md-4">
-            <h5 class="fw-bold">تواصل معنا</h5>
+            <h5 class="fw-bold">Contact Us</h5>
             <p class="mb-1">
               <i class="fas fa-phone-alt me-2"></i>
               <a href="tel:+966501234567" class="text-light text-decoration-none" dir="ltr">+966 50 000 1111</a>
@@ -253,23 +233,23 @@
 
           <!-- Links -->
           <div class="col-md-4">
-            <h5 class="fw-bold">روابط سريعة</h5>
+            <h5 class="fw-bold">Quick Links</h5>
             <div class="d-flex flex-wrap justify-content-center gap-2">
-              <a href="#" class="btn btn-outline-light btn-sm">الرئيسية</a>
-              <a href="./about.html" class="btn btn-outline-light btn-sm">عنا</a>
-              <a href="./events.html" class="btn btn-outline-light btn-sm">الفعاليات</a>
-              <a href="./contact.html" class="btn btn-outline-light btn-sm">تواصل معنى</a>
+              <a href="./indexEN.html" class="btn btn-outline-light btn-sm">Home</a>
+              <a href="./aboutEN.html" class="btn btn-outline-light btn-sm">About</a>
+              <a href="./eventsEN.html" class="btn btn-outline-light btn-sm">Events</a>
+              <a href="./contactEN.html" class="btn btn-outline-light btn-sm">Contact Us</a>
             </div>
           </div>
 
           <!-- Social -->
           <div class="col-md-4">
-            <h5 class="fw-bold">تابعنا</h5>
+            <h5 class="fw-bold">Follow Us</h5>
             <div class="d-flex flex-wrap justify-content-center gap-2">
-              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-facebook-f me-1"></i>فيسبوك</a>
-              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-twitter me-1"></i>تويتر</a>
-              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-instagram me-1"></i>إنستغرام</a>
-              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-linkedin-in me-1"></i>لينكدإن</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-facebook-f me-1"></i>Facebook</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-twitter me-1"></i>Twitter</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-instagram me-1"></i>Instagram</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-linkedin-in me-1"></i>LinkedIn</a>
             </div>
           </div>
         </div>
@@ -277,7 +257,7 @@
         <hr class="border-secondary my-3" />
 
         <div class="text-center small">
-          © <span id="year"></span> جميع الحقوق محفوظة — فعالياتك
+          © <span id="year"></span> All Rights Reserved — Your Events
         </div>
       </div>
 
