--- a/contactEN.html
+++ b/contactEN.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="فعالياتك - اكتشف أحدث الفعاليات والأنشطة الترفيهية والثقافية والرياضية في مدينتك. تابع الفعاليات المميزة واحجز مكانك بسهولة." />
-  <meta name="keywords" content="فعاليات, ترفيه, حفلات, مهرجانات, ثقافة, رياضة, أحداث, جدة, السعودية" />
-  <meta name="author" content="فعالياتك" />
+    content="Your Events - Discover the latest entertainment, cultural, and sports events and activities in your city. Follow exciting events and book your spot easily." />
+  <meta name="keywords" content="events, entertainment, concerts, festivals, culture, sports, activities, Jeddah, Saudi Arabia" />
+  <meta name="author" content="Your Events" />
 
-  <!-- bootstrap fontawesom -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.rtl.min.css"
-    integrity="sha384-DOXMLfHhQkvFFp+rWTZwVlPVqdIhpDVYT9csOnHSgWQWPX0v5MCGtjCJbY6ERspU" crossorigin="anonymous" />
+  <!-- Bootstrap and Font Awesome -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <!-- icon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/icon//apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/icon//favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icon//favicon-16x16.png" />
-  <link rel="manifest" href="./assets/img/icon//site.webmanifest" />
+  <!-- Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/icon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/icon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icon/favicon-16x16.png" />
+  <link rel="manifest" href="./assets/img/icon/site.webmanifest" />
 
   <link rel="stylesheet" href="./assets/css/index.css" />
   <link rel="stylesheet" href="./assets/css/contact.css" />
   <link rel="stylesheet" href="./assets/css/darkMode.css" />
 
-  <title>فعالياتك</title>
+  <title>Your Events</title>
 </head>
 
 <body>
-  <!-- navbar -->
+  <!-- Navbar -->
   <header>
-    <!-- navbar  -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="logo me-3" href="./index.html">فعالياتك</a>
+        <a class="logo ms-3" href="./index.html">Your Events</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,62 +43,56 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item ps-5">
-              <a class="nav-link" aria-current="page" href="./index.html">الرئيسية</a>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item pe-5">
+              <a class="nav-link" aria-current="page" href="./indexEN.html">Home</a>
             </li>
-            <li class="nav-item ps-5">
-              <a class="nav-link" href="./events.html">الفعاليات</a>
+            <li class="nav-item pe-5">
+              <a class="nav-link" href="./eventsEN.html">Events</a>
             </li>
-            <li class="nav-item ps-5">
-              <a class="nav-link active" href="./contact.html">تواصل معنا</a>
+            <li class="nav-item pe-5">
+              <a class="nav-link active" href="./contactEN.html">Contact Us</a>
             </li>
-            <li class="nav-item ps-5">
-              <a class="nav-link" href="./about.html">عنا</a>
+            <li class="nav-item pe-5">
+              <a class="nav-link" href="./aboutEN.html">About</a>
             </li>
           </ul>
-                  <a href="./contactEN.html">
-          <button id="lang-toggle" class="btn btn-outline-secondary me-3">
-            <i class="fa-solid fa-language"></i>
+          <a href="./contactEN.html">
+            <button id="lang-toggle" class="btn btn-outline-secondary ms-3">
+              <i class="fa-solid fa-language"></i>
+            </button>
+          </a>
+          <button id="theme-toggle" class="btn btn-outline-secondary ms-3">
+            <i class="fas fa-sun"></i>
           </button>
-        </a>
-        <button id="theme-toggle" class="btn btn-outline-secondary me-3">
-          <i class="fas fa-sun"></i>
-        </button>
         </div>
       </div>
     </nav>
   </header>
 
-  <!-- conatact  -->
+  <!-- Contact -->
   <main>
     <section class="container py-5 contact">
-
       <div class="row py-5">
-        <!--  contact info -->
+        <!-- Contact Info -->
         <div class="col-md-5 mb-4 contact-info">
           <div class="p-4 border rounded shadow-sm">
-            <h2 class="fw-bolder mb-4">تواصل معنا</h2>
+            <h2 class="fw-bolder mb-4">Contact Us</h2>
 
             <h6 class="fw-bold">
-              الهاتف <i class="fas fa-phone-alt "></i>
+              Phone <i class="fas fa-phone-alt"></i>
             </h6>
-
             <a href="tel:+966500001111" class="text-muted d-block mb-3 text-decoration-none">
-
-              <span dir="ltr" class="">
-                +966 50 000 1111
-              </span>
-
+              <span dir="ltr">+966 50 000 1111</span>
             </a>
 
             <h6 class="fw-bold">
-              البريد الإلكتروني <i class="fas fa-envelope "></i>
+              Email <i class="fas fa-envelope"></i>
             </h6>
             <a href="mailto:info@example.com" class="text-muted d-block mb-3 text-decoration-none">info@example.com</a>
 
             <h6 class="fw-bold">
-              مواقع التواصل الاجتماعي <i class="fas fa-share-alt"></i>
+              Social Media <i class="fas fa-share-alt"></i>
             </h6>
             <div class="d-flex gap-3 my-3 social">
               <a href="#" class="text-muted"><i class="fab fa-twitter fa-2x"></i></a>
@@ -108,60 +101,60 @@
               <a href="#" class="text-muted"><i class="fab fa-linkedin fa-2x"></i></a>
             </div>
 
-            <h6 class="fw-bold mt-4 pb-1">روابط سريعة</h6>
+            <h6 class="fw-bold mt-4 pb-1">Quick Links</h6>
             <div class="d-flex flex-wrap justify-content-start gap-2 fast-link">
-              <a href="./index.html" class="btn btn-outline-light btn-sm">الرئيسية</a>
-              <a href="./about.html" class="btn btn-outline-light btn-sm">عنا</a>
-              <a href="./events.html" class="btn btn-outline-light btn-sm">الفعاليات</a>
+              <a href="./index.html" class="btn btn-outline-light btn-sm">Home</a>
+              <a href="./about.html" class="btn btn-outline-light btn-sm">About</a>
+              <a href="./events.html" class="btn btn-outline-light btn-sm">Events</a>
             </div>
 
             <!-- Modal Button -->
             <button class="btn btn-outline-secondary mt-4" data-bs-toggle="modal" data-bs-target="#infoModal">
-              <i class="fas fa-info-circle"></i> معلومات إضافية
+              <i class="fas fa-info-circle"></i> Additional Information
             </button>
           </div>
         </div>
 
-        <!-- Card -->
+        <!-- Contact Form -->
         <div class="col-md-7 msg-card">
           <div class="card shadow">
             <div class="card-body">
-              <h4 class="card-title fw-bold mb-4">أرسل رسالة</h4>
+              <h4 class="card-title fw-bold mb-4">Send a Message</h4>
 
               <form id="contact-form" class="needs-validation" novalidate>
                 <div class="row mb-3">
                   <div class="col">
-                    <label class="form-label">الاسم الأول *</label>
+                    <label class="form-label">First Name *</label>
                     <input type="text" name="first_name" class="form-control" required>
-                    <div class="invalid-feedback">الرجاء إدخال الاسم الأول</div>
+                    <div class="invalid-feedback">Please enter your first name</div>
                   </div>
                   <div class="col">
-                    <label class="form-label">اسم العائلة *</label>
+                    <label class="form-label">Last Name *</label>
                     <input type="text" name="last_name" class="form-control" required>
-                    <div class="invalid-feedback">الرجاء إدخال اسم العائلة</div>
+                    <div class="invalid-feedback">Please enter your last name</div>
                   </div>
                 </div>
 
                 <div class="row mb-3">
                   <div class="col">
-                    <label class="form-label">البريد الإلكتروني *</label>
+                    <label class="form-label">Email *</label>
                     <input type="email" name="email" class="form-control" required>
-                    <div class="invalid-feedback">الرجاء إدخال بريد إلكتروني صحيح</div>
+                    <div class="invalid-feedback">Please enter a valid email address</div>
                   </div>
                   <div class="col">
-                    <label class="form-label">الموضوع</label>
+                    <label class="form-label">Subject</label>
                     <input type="text" name="subject" class="form-control">
                   </div>
                 </div>
 
                 <div class="mb-3">
-                  <label class="form-label">الرسالة *</label>
+                  <label class="form-label">Message *</label>
                   <textarea name="message" rows="5" class="form-control" required></textarea>
-                  <div class="invalid-feedback">الرجاء كتابة الرسالة</div>
+                  <div class="invalid-feedback">Please write your message</div>
                 </div>
 
                 <button type="submit" class="btn btn-warning w-100 fw-bold">
-                  🚀 إرسال
+                  🚀 Send
                 </button>
               </form>
             </div>
@@ -169,37 +162,37 @@
         </div>
       </div>
     </section>
-
   </main>
-  <!-- model info -->
+
+  <!-- Modal -->
   <div class="modal fade" id="infoModal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">معلومات إضافية</h5>
+          <h5 class="modal-title">Additional Information</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body">
-          <p>هنا أي تفاصيل إضافية عن الموقع أو طرق تواصل أخرى.</p>
+          <p>Here are any additional details about the website or other contact methods.</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- footer -->
+  <!-- Footer -->
   <footer>
     <section class="footer wave-sec pb-4 text-center">
       <div class="container">
         <div class="row gy-3 justify-content-center">
           <!-- Contact -->
           <div class="col-md-4">
-            <h5 class="fw-bold">تواصل معنا</h5>
+            <h5 class="fw-bold">Contact Us</h5>
             <p class="mb-1">
               <i class="fas fa-phone-alt me-2"></i>
-              <a href="tel:+966501234567" class="text-light text-decoration-none" dir="ltr">+966 50 000 1111</a>
+              <a href="tel:+966500001111" class="text-light text-decoration-none" dir="ltr">+966 50 000 1111</a>
             </p>
             <p class="mb-1">
               <i class="fas fa-envelope me-2"></i>
@@ -209,23 +202,23 @@
 
           <!-- Links -->
           <div class="col-md-4">
-            <h5 class="fw-bold">روابط سريعة</h5>
+            <h5 class="fw-bold">Quick Links</h5>
             <div class="d-flex flex-wrap justify-content-center gap-2">
-              <a href="./index.html" class="btn btn-outline-light btn-sm">الرئيسية</a>
-              <a href="./about.html" class="btn btn-outline-light btn-sm">عنا</a>
-              <a href="./events.html" class="btn btn-outline-light btn-sm">الفعاليات</a>
-              <a href="./contact.html" class="btn btn-outline-light btn-sm">تواصل معنا</a>
+              <a href="./index.html" class="btn btn-outline-light btn-sm">Home</a>
+              <a href="./about.html" class="btn btn-outline-light btn-sm">About</a>
+              <a href="./events.html" class="btn btn-outline-light btn-sm">Events</a>
+              <a href="./contact.html" class="btn btn-outline-light btn-sm">Contact Us</a>
             </div>
           </div>
 
           <!-- Social -->
           <div class="col-md-4">
-            <h5 class="fw-bold">تابعنا</h5>
+            <h5 class="fw-bold">Follow Us</h5>
             <div class="d-flex flex-wrap justify-content-center gap-2">
-              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-facebook-f me-1"></i>فيسبوك</a>
-              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-twitter me-1"></i>تويتر</a>
-              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-instagram me-1"></i>إنستغرام</a>
-              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-linkedin-in me-1"></i>لينكدإن</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-facebook-f me-1"></i>Facebook</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-twitter me-1"></i>Twitter</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-instagram me-1"></i>Instagram</a>
+              <a href="#" class="btn btn-outline-light btn-sm"><i class="fab fa-linkedin-in me-1"></i>LinkedIn</a>
             </div>
           </div>
         </div>
@@ -233,7 +226,7 @@
         <hr class="border-secondary my-3" />
 
         <div class="text-center small">
-          © <span id="year"></span> جميع الحقوق محفوظة — فعالياتك
+          © <span id="year"></span> All Rights Reserved — Your Events
         </div>
       </div>
 
@@ -257,7 +250,7 @@
     </section>
   </footer>
 
-  <!-- for bootstrap and js for this page -->
+  <!-- Bootstrap and JS for this page -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
