--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
             </li>
           </ul>
         </div>
+
+
+        <a href="./indexEN.html">
+          <button id="lang-toggle" class="btn btn-outline-secondary me-3">
+            <i class="fa-solid fa-language"></i>
+          </button>
+        </a>
+
         <button id="theme-toggle" class="btn btn-outline-secondary me-3">
           <i class="fas fa-sun"></i>
         </button>
@@ -90,7 +98,7 @@
                     <h1>كأس السوبر الإسباني 2026</h1>
                     <p class="event-details">
                       <span class="date"><strong>التاريخ:</strong> 10 يناير 2026</span>
-                      <span class="location"><strong>المكان:</strong> جدة – ملعب الجوهرة</span>
+                      <span class="location"><strong>المكان:</strong> جدة - ملعب الجوهرة</span>
                       <span class="category"><strong>التصنيفات:</strong> رياضة</span>
                     </p>
                     <p>
@@ -127,8 +135,8 @@
                   <div class="container slider-content">
                     <h1>مهرجان التراث الجدة 2025</h1>
                     <p class="event-details">
-                      <span class="date"><strong>التاريخ:</strong> 5–15 نوفمبر 2025</span>
-                      <span class="location"><strong>المكان:</strong> جدة – كورنيش جدة والمناطق
+                      <span class="date"><strong>التاريخ:</strong> 5-15 نوفمبر 2025</span>
+                      <span class="location"><strong>المكان:</strong> جدة - كورنيش جدة والمناطق
                         التراثية</span>
                       <span class="category"><strong>التصنيفات:</strong> ثقافي</span>
                     </p>
@@ -243,8 +251,8 @@
                   <h6 class="category text-info">موسيقى</h6>
                   <h3 class="card-caption">موسم جدة 2025</h3>
                   <p class="card-description">
-                    <strong>📅 التاريخ:</strong> 1 – 30 مارس 2025 <br />
-                    <strong>📍 المكان:</strong> جدة – عدة مواقع <br />
+                    <strong>📅 التاريخ:</strong> 1 - 30 مارس 2025 <br />
+                    <strong>📍 المكان:</strong> جدة - عدة مواقع <br />
                     فعاليات متنوعة من حفلات، عروض ترفيهية، وتجارب عائلية تناسب
                     جميع الأعمار.
                   </p>
@@ -264,8 +272,8 @@
                   <h6 class="category text-info">ثقافي</h6>
                   <h3 class="card-caption">مهرجان جدة التراثي 2025</h3>
                   <p class="card-description">
-                    <strong>📅 التاريخ:</strong> 5 – 15 نوفمبر 2025 <br />
-                    <strong>📍 المكان:</strong> جدة – البلد التاريخية <br />
+                    <strong>📅 التاريخ:</strong> 5 - 15 نوفمبر 2025 <br />
+                    <strong>📍 المكان:</strong> جدة - البلد التاريخية <br />
                     احتفال بالتراث المحلي يشمل عروض فلكلورية، حرف تقليدية،
                     وأجواء أصيلة.
                   </p>
@@ -285,8 +293,8 @@
                   <h6 class="category text-info">ثقافي</h6>
                   <h3 class="card-caption">معرض جدة الدولي للكتاب</h3>
                   <p class="card-description">
-                    <strong>📅 التاريخ:</strong> 20 – 30 سبتمبر 2025 <br />
-                    <strong>📍 المكان:</strong> جدة – مركز المعارض <br />
+                    <strong>📅 التاريخ:</strong> 20 - 30 سبتمبر 2025 <br />
+                    <strong>📍 المكان:</strong> جدة - مركز المعارض <br />
                     معرض يجمع ناشرين محليين وعالميين مع أنشطة ثقافية وورش عمل.
                   </p>
                   <a href="./event.html" class="btn btn-danger btn-round">
