--- a/eventsEN.html
+++ b/eventsEN.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="فعالياتك - اكتشف أحدث الفعاليات والأنشطة الترفيهية والثقافية والرياضية في مدينتك. تابع الفعاليات المميزة واحجز مكانك بسهولة."
+      content="Your Events - Discover the latest entertainment, cultural, and sports events and activities in your city. Follow exciting events and book your spot easily."
     />
     <meta
       name="keywords"
-      content="فعاليات, ترفيه, حفلات, مهرجانات, ثقافة, رياضة, أحداث, جدة, السعودية"
+      content="events, entertainment, concerts, festivals, culture, sports, activities, Jeddah, Saudi Arabia"
     />
-    <meta name="author" content="فعالياتك" />
+    <meta name="author" content="Your Events" />
 
-    <!-- bootstrap fontawesom -->
+    <!-- Bootstrap and Font Awesome -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.rtl.min.css"
-      integrity="sha384-DOXMLfHhQkvFFp+rWTZwVlPVqdIhpDVYT9csOnHSgWQWPX0v5MCGtjCJbY6ERspU"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
 
@@ -29,38 +29,39 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-- icon -->
+    <!-- Icons -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./assets/img/icon//apple-touch-icon.png"
+      href="./assets/img/icon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/img/icon//favicon-32x32.png"
+      href="./assets/img/icon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./assets/img/icon//favicon-16x16.png"
+      href="./assets/img/icon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./assets/img/icon//site.webmanifest" />
+    <link rel="manifest" href="./assets/img/icon/site.webmanifest" />
 
     <link rel="stylesheet" href="./assets/css/index.css" />
-  <link rel="stylesheet" href="./assets/css/darkMode.css" />    <link rel="stylesheet" href="./assets/css/events.css" />
+    <link rel="stylesheet" href="./assets/css/darkMode.css" />
+    <link rel="stylesheet" href="./assets/css/events.css" />
 
-    <title>فعالياتك</title>
+    <title>Your Events</title>
   </head>
 
   <body>
     <header>
-      <!-- navbar  -->
+      <!-- Navbar -->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="logo me-3" href="./index.html">فعالياتك</a>
+          <a class="logo ms-3" href="./index.html">Your Events</a>
 
           <button
             class="navbar-toggler"
@@ -76,46 +77,45 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-              <li class="nav-item ps-5">
-                <a class="nav-link" aria-current="page" href="./index.html"
-                  >الرئيسية</a
+              <li class="nav-item pe-5">
+                <a class="nav-link" aria-current="page" href="./indexEN.html"
+                  >Home</a
                 >
               </li>
-              <li class="nav-item ps-5">
-                <a class="nav-link active" href="./events.html">الفعاليات</a>
+              <li class="nav-item pe-5">
+                <a class="nav-link active" href="./eventsEN.html">Events</a>
               </li>
-              <li class="nav-item ps-5">
-                <a class="nav-link" href="./contact.html">تواصل معنا</a>
+              <li class="nav-item pe-5">
+                <a class="nav-link" href="./contactEN.html">Contact Us</a>
               </li>
-                            <li class="nav-item ps-5">
-                <a class="nav-link" href="./about.html">عنا</a>
+              <li class="nav-item pe-5">
+                <a class="nav-link" href="./aboutEN.html">About</a>
               </li>
             </ul>
-        <a href="./eventsEN.html">
-          <button id="lang-toggle" class="btn btn-outline-secondary me-3">
-            <i class="fa-solid fa-language"></i>
-          </button>
-        </a>
-        <button id="theme-toggle" class="btn btn-outline-secondary me-3">
-          <i class="fas fa-sun"></i>
-        </button>
+            <a href="./events.html">
+              <button id="lang-toggle" class="btn btn-outline-secondary ms-3">
+                <i class="fa-solid fa-language"></i>
+              </button>
+            </a>
+            <button id="theme-toggle" class="btn btn-outline-secondary ms-3">
+              <i class="fas fa-sun"></i>
+            </button>
           </div>
         </div>
       </nav>
     </header>
     <main>
-
       <div class="events" id="events">
         <div class="filter">
           <div class="switcher">
-            <button class="active" data-name="الكل">الكل</button>
-            <button data-name="ثقافية">ثقافية</button>
-            <button data-name="رياضية">رياضية</button>
-            <button data-name="تراثية">تراثية</button>
+            <button class="active" data-name="all">All</button>
+            <button data-name="cultural">Cultural</button>
+            <button data-name="sports">Sports</button>
+            <button data-name="heritage">Heritage</button>
           </div>
         </div>
         <div class="container">
-          <div class="box quality card" data-name="رياضية">
+          <div class="box quality card" data-name="sports">
             <div class="img-holder">
               <img
                 decoding="async"
@@ -123,16 +123,17 @@
                 alt=""
               />
             </div>
-            <h2>كأس السوبر الإسباني 2026</h2>
+            <h2>Spanish Super Cup 2026</h2>
             <p>
-              مباراة كروية تجمع أبرز فرق الدوري الإسباني في أجواء مثيرة وحماسية
-              لعشاق كرة القدم.<br />جدة - ملعب الجوهرة<br />
-              5 - 10 يناير 2025
+              A thrilling football match bringing together top Spanish league
+              teams in an exciting atmosphere for football fans.<br />Jeddah -
+              Al-Jawhara Stadium<br />
+              January 5 - 10, 2025
             </p>
-            <a href="./event.html">تفاصيل </a>
+            <a href="./event.html">Details</a>
           </div>
 
-          <div class="box time card" data-name="ثقافية">
+          <div class="box time card" data-name="cultural">
             <div class="img-holder">
               <img
                 decoding="async"
@@ -141,18 +142,18 @@
               />
             </div>
             <h2>
-              موسم جدة<br />
+              Jeddah Season<br />
               2025
             </h2>
             <p>
-              فعاليات متنوعة من حفلات، عروض ترفيهية، وتجارب عائلية تناسب جميع
-              الأعمار.
-              <br />جدة - عدة مواقع <br />
-              1 - 30 مارس 2025
+              A variety of events including concerts, entertainment shows, and
+              family-friendly experiences suitable for all ages.<br />Jeddah -
+              Multiple Locations<br />
+              March 1 - 30, 2025
             </p>
-            <a href="./event.html">تفاصيل</a>
+            <a href="./event.html">Details</a>
           </div>
-          <div class="box passion card" data-name="تراثية">
+          <div class="box passion card" data-name="heritage">
             <div class="img-holder">
               <img
                 decoding="async"
@@ -160,15 +161,16 @@
                 alt=""
               />
             </div>
-            <h2>مهرجان جدة التراثي 2025</h2>
+            <h2>Jeddah Heritage Festival 2025</h2>
             <p>
-              احتفال بالتراث المحلي يشمل عروض فلكلورية، حرف تقليدية، وأجواء
-              أصيلة. <br />جدة - البلد التاريخية<br />
-              1- 30 مارس 2025
+              A celebration of local heritage featuring folkloric performances,
+              traditional crafts, and an authentic atmosphere.<br />Jeddah -
+              Al-Balad Historical District<br />
+              March 1 - 30, 2025
             </p>
-            <a href="./event.html">تفاصيل</a>
+            <a href="./event.html">Details</a>
           </div>
-          <div class="box quality card" data-name="ثقافية">
+          <div class="box quality card" data-name="cultural">
             <div class="img-holder">
               <img
                 decoding="async"
@@ -176,15 +178,16 @@
                 alt=""
               />
             </div>
-            <h2>معرض جدة الدولي للكتاب</h2>
+            <h2>Jeddah International Book Fair</h2>
             <p>
-              معرض يجمع ناشرين محليين وعالميين مع أنشطة ثقافية وورش عمل.
-              <br />جدة - مركز المعارض<br />
-              20-30 سبتمبر 2025
+              An exhibition bringing together local and international publishers
+              with cultural activities and workshops.<br />Jeddah - Exhibition
+              Center<br />
+              September 20 - 30, 2025
             </p>
-            <a href="./event.html">تفاصيل</a>
+            <a href="./event.html">Details</a>
           </div>
-          <div class="box time card" data-name="رياضية">
+          <div class="box time card" data-name="sports">
             <div class="img-holder">
               <img
                 decoding="async"
@@ -192,14 +195,16 @@
                 alt=""
               />
             </div>
-            <h2>سباق الفورمولا 1 - جدة</h2>
+            <h2>Formula 1 Race - Jeddah</h2>
             <p>
-              سباق عالمي يجمع أسرع السائقين في حلبة شوارع جدة وسط أجواء مشوقة
-              .<br />جدة - كورنيش جدة<br />1 - 4 ديسمبر 2025
+              A world-class race featuring the fastest drivers on Jeddah’s street
+              circuit in an exhilarating atmosphere.<br />Jeddah - Jeddah
+              Corniche<br />
+              December 1 - 4, 2025
             </p>
-            <a href="./event.html">تفاصيل</a>
+            <a href="./event.html">Details</a>
           </div>
-          <div class="box passion card" data-name="ثقافية">
+          <div class="box passion card" data-name="cultural">
             <div class="img-holder">
               <img
                 decoding="async"
@@ -208,15 +213,15 @@
               />
             </div>
             <h2>
-              سوق البلدية<br />
-              التقليدي
+              Al-Balad Traditional<br />
+              Market
             </h2>
             <p>
-              سوق شعبي يعرض منتجات محلية وحرف يدوية في أجواء تراثية. <br />جدة -
-              حي البلد<br />
-              متاح طوال العام
+              A popular market showcasing local products and handicrafts in a
+              heritage atmosphere.<br />Jeddah - Al-Balad District<br />
+              Available Year-Round
             </p>
-            <a href="./event.html">تفاصيل</a>
+            <a href="./event.html">Details</a>
           </div>
         </div>
       </div>
@@ -227,7 +232,7 @@
           <div class="row gy-3 justify-content-center">
             <!-- Contact -->
             <div class="col-md-4">
-              <h5 class="fw-bold">تواصل معنا</h5>
+              <h5 class="fw-bold">Contact Us</h5>
               <p class="mb-1">
                 <i class="fas fa-phone-alt me-2"></i>
                 <a
@@ -249,38 +254,38 @@
 
             <!-- Links -->
             <div class="col-md-4">
-              <h5 class="fw-bold">روابط سريعة</h5>
+              <h5 class="fw-bold">Quick Links</h5>
               <div class="d-flex flex-wrap justify-content-center gap-2">
                 <a href="./index.html" class="btn btn-outline-light btn-sm"
-                  >الرئيسية</a
+                  >Home</a
                 >
                 <a href="./about.html" class="btn btn-outline-light btn-sm"
-                  >عنا</a
+                  >About</a
                 >
                 <a href="./events.html" class="btn btn-outline-light btn-sm"
-                  >الفعاليات</a
+                  >Events</a
                 >
                 <a href="./contact.html" class="btn btn-outline-light btn-sm"
-                  >تواصل معنا</a
+                  >Contact Us</a
                 >
               </div>
             </div>
 
             <!-- Social -->
             <div class="col-md-4">
-              <h5 class="fw-bold">تابعنا</h5>
+              <h5 class="fw-bold">Follow Us</h5>
               <div class="d-flex flex-wrap justify-content-center gap-2">
                 <a href="#" class="btn btn-outline-light btn-sm"
-                  ><i class="fab fa-facebook-f me-1"></i>فيسبوك</a
+                  ><i class="fab fa-facebook-f me-1"></i>Facebook</a
                 >
                 <a href="#" class="btn btn-outline-light btn-sm"
-                  ><i class="fab fa-twitter me-1"></i>تويتر</a
+                  ><i class="fab fa-twitter me-1"></i>Twitter</a
                 >
                 <a href="#" class="btn btn-outline-light btn-sm"
-                  ><i class="fab fa-instagram me-1"></i>إنستغرام</a
+                  ><i class="fab fa-instagram me-1"></i>Instagram</a
                 >
                 <a href="#" class="btn btn-outline-light btn-sm"
-                  ><i class="fab fa-linkedin-in me-1"></i>لينكدإن</a
+                  ><i class="fab fa-linkedin-in me-1"></i>LinkedIn</a
                 >
               </div>
             </div>
@@ -289,7 +294,7 @@
           <hr class="border-secondary my-3" />
 
           <div class="text-center small">
-            © <span id="year"></span> جميع الحقوق محفوظة — فعالياتك
+            © <span id="year"></span> All Rights Reserved — Your Events
           </div>
         </div>
 
