--- a/events.html
+++ b/events.html
@@ -23,9 +23,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icon//favicon-16x16.png" />
   <link rel="manifest" href="./assets/img/icon//site.webmanifest" />
 
-  <link rel="stylesheet" href="./assets/css/index.css" />
-  <link rel="stylesheet" href="./assets/css/darkMode.css" />
-  <link rel="stylesheet" href="./assets/css/events.css" />
+  <link rel="stylesheet" href="./assets/Css/index.css" />
+  <link rel="stylesheet" href="./assets/Css/darkMode.css" />
+  <link rel="stylesheet" href="./assets/Css/events.css" />
 
   <title>فعالياتك</title>
 </head>
@@ -62,7 +62,7 @@
                 <a class="nav-link" href="./about.html">عنا</a>
               </li>
             </ul>
-          <button id="toggleBtn" class=" py-auto me-3 border border-0">
+          <button id="toggleBtn" class=" py-auto py-auto me-3 border border-0 lang-btn lang-btn">
             <img src="./assets/img/EN.webp" alt="EN" style="max-height: 2rem;">
           </button>
 
@@ -263,7 +263,7 @@
                 <a class="nav-link" href="./about.html">About</a>
               </li>
             </ul>
-            <button id="toggleBtn" class="me-3 border border-0">
+            <button id="toggleBtn" class="py-auto me-3 border border-0 lang-btn">
               <img src="./assets/img/AR.webp" alt="AR" style="max-height: 2rem;">
             </button>
             <button id="theme-toggle" class="btn btn-outline-secondary ms-3">
